G1R1C2 : correction affichage contraste (nuage sur ecriture)

--- a/static/css/hero.css
+++ b/static/css/hero.css
@@ -29,7 +29,7 @@
   content: "";
   position: absolute;
   inset: 0;
-  background-color: rgba(0, 0, 0, 0);
+  background-color: rgba(13, 110, 253, 0.25);
   z-index: 0;
 }
 
